---
source: spade-tests/src/typeinference.rs
---
pipeline(10) p(clk: clock, x: bool) -> bool {
    reg * {8};
    reg;
        x
}


error: Pipeline depth mismatch. Expected 10 got 9
  ┌─ testinput:1:1
  │  
1 │ ╭ pipeline(10) p(clk: clock, x: bool) -> bool {
  │            -- Type 10 inferred here
2 │ │     reg * {8};
3 │ │     reg;
4 │ │         x
5 │ │ }
  │ ╰─^ Found 9 stages in this pipeline
  │  
  = note: Expected: 9
               Got: 10
